# cmaketest

./: CMakeLists.txt  README.md
cmake/: libfooConfig.cmake.in
cmake/Modules/: FindPCAP.cmake
src/: lib.cpp  lib.h
